# sast-agent

./: .gitignore  CLAUDE.md  CLAUDE.md.zh  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: sast-manual.yml  sast-pr.yml  sast-weekly.yml
agents/: fixer_prompt.md  scanner_prompt.md  validator_prompt.md
orchestrator/: __init__.py  agent_runtime.py  baseline.py  fingerprint.py  fixer_pool.py  github.py  main.py  report.py  reviewer_client.py  scanner_client.py  scope.py  validator_pool.py
orchestrator/agents/: reviewer_prompt.md  scanner_prompt.md  validator_prompt.md
orchestrator/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py
orchestrator/skills/sast-audit/references/: false-positive-patterns.md  report-template.md  sink-patterns.md
orchestrator/tools/: __init__.py  registry.py  semantic_tools.py
orchestrator/ui/: app.py  queries.py
orchestrator/ui/static/: app.css
orchestrator/ui/templates/: _rows.html  base.html  detail.html  list.html  trends.html
scripts/: smoke_test.py
skills/sast-audit/: SKILL.md
skills/sast-audit/references/: sink-patterns.md
testfixtures/vulnerable-java/: README.md
testfixtures/vulnerable-java/src/: CommandRunner.java  LoginVo.java  SafeUserDao.java  SearchController.java  SecurityConfig.java
testfixtures/vulnerable-java/util/: EntityManagerUtil.java
