[project]
name = "sast-agent"
version = "0.1.0"
description = "Multi-agent SAST pipeline powered by Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "anyio>=4.0",
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.scripts]
sast-agent = "orchestrator.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.setuptools.package-data]
"orchestrator.ui" = ["templates/*.html", "static/*.css"]

[tool.ruff]
line-length = 100
target-version = "py311"
